--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/d/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/d/index.html
@@ -35,7 +35,7 @@
                 v-bind:constraint="validations.employeeCode"
                 v-bind:errors-always="$errors.employeeCode"
                 v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }"
-                @keyup.enter="sendMail" />
+                @keydown.enter="sendMail" />
 
             <div class="mb-2">
                 <button class="btn btn-primary btn-lg btn-block" v-click:500="sendMail">{{ 'CCGS07_40' | i18n }}</button>
