CCG001 update for department(3)

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/008/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/008/a/index.xhtml
@@ -7,7 +7,7 @@
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
-			<script>var dialogSize = { width: 500, height: 630 };</script>
+			<script>var dialogSize = { width: 500, height: 650 };</script>
 			<com:scriptfile set="IGNITE" />
 			<com:stylefile path="cdl008.a.main.css" />
 			<com:scriptfile path="/view/kcp/share/list.js" of="/nts.uk.com.web" />
@@ -23,6 +23,7 @@
 						<label data-bind="if: startMode == 1">#{i18n.getText('CDL008_6')}</label>
 					</div>
 					<div id="workplaceList" tabindex="-1"></div>
+					<div id="departmentList" tabindex="-1"></div>
 				</div>
 			</div>
 			<div id="functions-area-bottom">
