--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -35,6 +35,8 @@
 					<div id="com-ccg001"></div>
 					<h1>CCG001 社員範囲選択 （共通部品） Employee range selection</h1>
 					<note style="width:500px; margin-left: 100px">
+						<b>Update 2019/04/26</b> <br />
+						- Add feature for department<br /><br />
 						<b>Update 2018/09/14</b> <br />
 						- Add feature for synchronizing baseDate and period with parent screen<br /><br />
 						<b>Update 2018/08/07</b> <br />
@@ -147,7 +149,7 @@
 						<div class="cell">
 						<h2>Advanced search properties:</h2>
 						<div data-bind="ntsCheckBox:{checked: showEmployment}">Show Employment (雇用条件)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: showDepartment}">Show deaprtment (部門条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: showDepartment}">Show department (部門条件)</div><br/>
 						<div data-bind="ntsCheckBox:{checked: showWorkplace}">Show workplace (職場条件)</div><br/>
 						<div data-bind="ntsCheckBox:{checked: showClassification}">Show classification (分類条件)</div><br/>
 						<div data-bind="ntsCheckBox:{checked: showJobTitle}">Show jobtitle (職位条件)</div><br/>
@@ -233,11 +235,14 @@ const ccg001ComponentOption: GroupOption = {
 	/** Quick search tab options */
 	showAllReferableEmployee: true,
 	showOnlyMe: true,
+	showSameDepartment: true,
+	showSameDepartmentAndChild: true,
 	showSameWorkplace: true,
 	showSameWorkplaceAndChild: true,
 	
 	/** Advanced search properties */
 	showEmployment: true,
+	showDepartment: true
 	showWorkplace: true,
 	showClassification: true,
 	showJobTitle: true,
@@ -258,51 +263,62 @@ $('#com-ccg001').ntsGroupComponent(ccg001ComponentOption); // '#com-ccg-001' is 
 
 // Note: Defining these interfaces are optional
 export interface GroupOption {
-    /** Common properties */
-    showEmployeeSelection?: boolean; // 検索タイプ
-    systemType: number; // システム区分
-    showQuickSearchTab?: boolean; // クイック検索
-    showAdvancedSearchTab?: boolean; // 詳細検索
-    showBaseDate?: boolean; // 基準日利用
-    showClosure?: boolean; // 就業締め日利用
-    showAllClosure?: boolean; // 全締め表示
-    showPeriod?: boolean; // 対象期間利用
-    periodFormatYM?: boolean; // 対象期間精度
-    isInDialog?: boolean;
+	/** Common properties */
+	showEmployeeSelection?: boolean; // 検索タイプ
+	systemType: number; // システム区分
+	showQuickSearchTab?: boolean; // クイック検索
+	showAdvancedSearchTab?: boolean; // 詳細検索
+	showBaseDate?: boolean; // 基準日利用
+	showClosure?: boolean; // 就業締め日利用
+	showAllClosure?: boolean; // 全締め表示
+	showPeriod?: boolean; // 対象期間利用
+	periodFormatYM?: boolean; // 対象期間精度
+	maxPeriodRange?: string; // 最長期間
+	showSort?: boolean; // 並び順利用
+	nameType?: number; // 氏名の種類
 
-    /** Required parameter */
-    baseDate?: string; // 基準日
-    periodStartDate?: string; // 対象期間開始日
-    periodEndDate?: string; // 対象期間終了日
-    inService: boolean; // 在職区分
-    leaveOfAbsence: boolean; // 休職区分
-    closed: boolean; // 休業区分
-    retirement: boolean; // 退職区分
+	/** Required parameter */
+	baseDate?: any; // 基準日 KnockoutObservable<string> or string
+	periodStartDate?: any; // 対象期間開始日 KnockoutObservable<string> or string
+	periodEndDate?: any; // 対象期間終了日 KnockoutObservable<string> or string
+	dateRangePickerValue?: KnockoutObservable<any>;
+	inService: boolean; // 在職区分
+	leaveOfAbsence: boolean; // 休職区分
+	closed: boolean; // 休業区分
+	retirement: boolean; // 退職区分
 
-    /** Quick search tab options */
-    showAllReferableEmployee?: boolean; // 参照可能な社員すべて
-    showOnlyMe?: boolean; // 自分だけ
-    showSameWorkplace?: boolean; // 同じ職場の社員
-    showSameWorkplaceAndChild?: boolean; // 同じ職場とその配下の社員
+	/** Quick search tab options */
+	showAllReferableEmployee?: boolean; // 参照可能な社員すべて
+	showOnlyMe?: boolean; // 自分だけ
+	showSameDepartment?: boolean; //同じ部門の社員
+	showSameDepartmentAndChild?: boolean; // 同じ部門とその配下の社員
+	showSameWorkplace?: boolean; // 同じ職場の社員
+	showSameWorkplaceAndChild?: boolean; // 同じ職場とその配下の社員
 
-    /** Advanced search properties */
-    showEmployment?: boolean; // 雇用条件
-    showWorkplace?: boolean; // 職場条件
-    showClassification?: boolean; // 分類条件
-    showJobTitle?: boolean; // 職位条件
-    showWorktype?: boolean; // 勤種条件
-    isMutipleCheck?: boolean; // 選択モード
-    isTab2Lazy?: boolean;
+	/** Advanced search properties */
+	showEmployment?: boolean; // 雇用条件
+	showWorkplace?: boolean; // 職場条件
+	showClassification?: boolean; // 分類条件
+	showJobTitle?: boolean; // 職位条件
+	showWorktype?: boolean; // 勤種条件
+	isMutipleCheck?: boolean; // 選択モード
+	showDepartment: boolean; // 部門条件
 
-    /** Data returned */
-    returnDataFromCcg001: (data: Ccg001ReturnedData) => void;
+	/** Optional properties */
+	isInDialog?: boolean;
+	showOnStart?: boolean;
+	isTab2Lazy?: boolean;
+	tabindex?: number;
+
+	/** Data returned */
+	returnDataFromCcg001: (data: Ccg001ReturnedData) => void;
 }
 export interface EmployeeSearchDto {
     employeeId: string;
     employeeCode: string;
     employeeName: string;
-    workplaceId: string;
-    workplaceName: string;
+    affiliationId: string; // departmentId or workplaceId based on system type
+    affiliationName: string; // departmentName or workplaceName based on system type
 }
 export interface Ccg001ReturnedData {
     baseDate: string; // 基準日
@@ -416,18 +432,32 @@ export interface Ccg001ReturnedData {
 											<td><b>Type:</b> boolean<br /><b>Default:</b> = true<br/> Show button 自分だけ</td>
 										</tr>
 										<tr>
+											<td>showSameDepartment<br/><i>(optional)</i></td>
+											<td><b>Type:</b> boolean<br /><b>Default:</b> = true<br/> Show button
+												同じ部門の社員</td>
+										</tr>
+										<tr>
+											<td>showSameDepartmentAndChild<br/><i>(optional)</i></td>
+											<td><b>Type:</b> boolean<br /><b>Default:</b> = true<br/> Show button
+												同じ部門とその配下の社員</td>
+										</tr>
+										<tr>
 											<td>showSameWorkplace<br/><i>(optional)</i></td>
 											<td><b>Type:</b> boolean<br /><b>Default:</b> = true<br/> Show/ button
-												おなじ職場の社員</td>
+												同じ職場の社員</td>
 										</tr>
 										<tr>
 											<td>showSameWorkplaceAndChild<br/><i>(optional)</i></td>
 											<td><b>Type:</b> boolean<br /><b>Default:</b> = true<br/> Show button
-												おなじ＋配下の職場の社員</td>
+												同じ職場とその配下の社員</td>
 										</tr>
 										<tr>
 											<td>showEmployment<br/><i>(optional)</i></td>
 											<td><b>Type:</b> boolean<br /><b>Default:</b> = true<br/> Show filter by employment</td>
+										</tr>
+										<tr>
+											<td>showDepartment<br/><i>(optional)</i></td>
+											<td><b>Type:</b> boolean<br /><b>Default:</b> = true<br/> Show filter by department</td>
 										</tr>
 										<tr>
 											<td>showWorkplace<br/><i>(optional)</i></td>
