--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
@@ -4,8 +4,10 @@
             <div class="text-center page-title">UniversalK</div>
             <fieldset class="login-form">
                 <nts-dropdown
+                    id="companyCode"
+                    data-dependency="employeeCode"
                     name='CCG007_7'
-                    tabindex='1'
+                    v-bind:tab-index='1'
                     v-model="model.comp"
                     v-bind:inline-title="true"
                     v-bind:disabled="false"
@@ -19,24 +21,27 @@
                 
                 <nts-text-editor
                     name='CCGS07_2'
-                    tabindex='2'
+                    v-bind:tab-index='2'
                     v-model="model.employeeCode"
                     v-bind:show-constraint="false"
                     v-bind:inline-title="true"
                     v-bind:disabled="disabled"
                     v-bind:show-title="true"
-                    v-bind:columns="{ title: 'col-lg-4 col-sm-6', input: 'col-lg-8 col-sm-6' }" />
+                    v-bind:columns="{ title: 'col-lg-4 col-sm-6', input: 'col-lg-8 col-sm-6' }" 
+                    id="employeeCode" data-dependency="password"/>
 
-                <nts-input-password
-                    name='CCGS07_3'
-                    tabindex='3'
-                    v-model="model.password"
-                    v-bind:show-constraint="false"
-                    v-bind:inline-title="true"
-                    v-bind:disabled="disabled"
-                    v-bind:show-title="true"
-                    v-bind:columns="{ title: 'col-lg-4 col-sm-6', input: 'col-lg-8 col-sm-6' }"
-                    @keydown.enter="login" />
+                <form v-submit="login">
+                    <nts-input-password
+                        id="password"
+                        name='CCGS07_3'
+                        v-bind:tab-index='3'
+                        v-model="model.password"
+                        v-bind:show-constraint="false"
+                        v-bind:inline-title="true"
+                        v-bind:disabled="disabled"
+                        v-bind:show-title="true"
+                        v-bind:columns="{ title: 'col-lg-4 col-sm-6', input: 'col-lg-8 col-sm-6' }"/>
+                </form>
 
                 <nts-checkbox 
                     class="form-check-info"
