--- a/nts.uk/uk.mobile/ClientApp/views/kdl/002/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kdl/002/index.html
@@ -10,6 +10,6 @@
     </ul>
 
     <div class="bg-primary fixed-bottom p-1 pl-3 pr-3 text-center">
-        <button class="btn btn-secondary btn-block"><i class="far fa-save mr-2"></i>{{ 'save' | i18n }}</button>
+        <button class="btn btn-secondary btn-block">{{ 'save' | i18n }}</button>
     </div>
 </div>
