add accordion sample (pure html)

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/accordion.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/accordion.scss
@@ -1,45 +1,70 @@
 .accordion {
+  .card {
+    .card-header {
+      &:before {
+        content: "\f078";
+        font-family: "Font Awesome 5 Free";
+        font-weight: 600;
+        position: absolute;
+        top: 19px;
+        right: 25px;
+        transition: all 0.6s cubic-bezier(0.81, -0.33, 0.345, 1.375);
+      }
+    }
+    .collapse {
+      max-height: 0;
+      transition: 0.5s ease all;
+      &:not(.show) {
+        display: block !important;
+      }
+    }
+
+    &.show {
+      .card-header {
+        &:before {
+          transform: rotate(180deg) translate(2px, 2px);
+        }
+      }
+      .collapse {
+        display: block;
+        max-height: 60em;
+      }
+    }
+  }
+  &-steps {
+    position: relative;
     .card {
-        &.show {
-            .collapse {
-                display: block;
-            }
+      border: 0;
+      &:not(.show) {
+        position: absolute;
+        &:not(.animated) {
+          display: none;
         }
-    }
-    &-steps {
+      }
+      &.show {
         position: relative;
-        .card {
-            border: 0;
-            &:not(.show) {
-                position: absolute;
-                &:not(.animated) {
-                    display: none;
-                }
-            }
-            &.show {
-                position: relative;
-                .collapse {
-                    display: block;
-                }
-            }
-            .card {
-                &-header {
-                    background-color: transparent;
-                    border-bottom: none;
-                    padding: 0.3rem;
-                    padding-left: 0;
-                    .btn {
-                        &.btn-link {
-                            padding: 0;
-                            text-decoration: none;
-                            cursor: pointer;
-                        }
-                    }
-                }
-                &-body {
-                    padding: 0;
-                }
-            }
+        .collapse {
+          display: block;
         }
+      }
+      .card {
+        &-header {
+          background-color: transparent;
+          border-bottom: none;
+          padding: 0.3rem;
+          padding-left: 0;
+          .btn {
+            &.btn-link {
+              padding: 0;
+              text-decoration: none;
+              cursor: pointer;
+            }
+          }
+        }
+        &-body {
+          padding: 0;
+        }
+      }
     }
+  }
 }
