fix btn link block for touch in mobile

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/accordion.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/accordion.scss
@@ -10,6 +10,11 @@
         right: 25px;
         transition: all 0.6s cubic-bezier(0.81, -0.33, 0.345, 1.375);
       }
+      .btn-link {
+        display: block;
+        width: 100%;
+        text-align: left;
+      }
     }
     .collapse {
       max-height: 0;
