--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/accordion.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/accordion.scss
@@ -1,19 +1,55 @@
 .accordion {
   .card {
     .card-header {
+      padding: 0.25rem;
       &:before {
+        color: $dark;
         content: "\f078";
         font-family: "Font Awesome 5 Free";
         font-weight: 600;
         position: absolute;
-        top: 19px;
-        right: 25px;
+        top: 0.8rem;
+        right: 1rem;
         transition: all 0.6s cubic-bezier(0.81, -0.33, 0.345, 1.375);
       }
       .btn-link {
+        color: $dark;
         display: block;
         width: 100%;
         text-align: left;
+        text-decoration: none;
+      }
+      &.p {
+        &-0 {
+          &:before {
+            top: 0.5rem;
+          }
+        }
+        &-1 {
+          &:before {
+            top: 0.8rem;
+          }
+        }
+        &-2 {
+          &:before {
+            top: 1.15rem;
+          }
+        }
+        &-3 {
+          &:before {
+            top: 1.55rem;
+          }
+        }
+        &-4 {
+          &:before {
+            top: 1.95rem;
+          }
+        }
+        &-5 {
+          &:before {
+            top: 3.35rem;
+          }
+        }
       }
     }
     .collapse {
