KAF011  - fix bug #106970 (ẩn control "直行する／しない" đi)

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/011/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/011/cm/index.xhtml
@@ -156,25 +156,25 @@
 						<input id="recTime1Start"
 							data-bind="ntsTimeWithDayEditor: { name: '#{i18n.getText('KAF011_32')}', 
 							value: startTime , enable: $parents[1].recTimeInputEnable  , readonly: false , required: true ,option: timeOption }" />
-						<div class="cf"
+						<!-- <div class="cf"
 							data-bind="ntsSwitchButton: {
 							options: startTypes ,
 							optionsValue: 'code',
 							optionsText: 'text',
 							value: startType ,
-							enable: $parents[1].recTimeSwitchEnable }"></div>
+							enable: $parents[1].recTimeSwitchEnable }"></div> -->
 						<div>#{i18n.getText('KAF011_37')}</div>
 						<input id="recTime1End"
 							data-bind="ntsTimeWithDayEditor: { name: '#{i18n.getText('KAF011_33')}', 
 							value: endTime , enable: $parents[1].recTimeInputEnable  , readonly: false , required: true ,option: timeOption }" />
 
-						<div class="cf"
+						<!-- <div class="cf"
 							data-bind="ntsSwitchButton: {
 							options: endTypes ,
 							optionsValue: 'code',
 							optionsText: 'text',
 							value: endType ,
-							enable: $parents[1].recTimeSwitchEnable }"></div>
+							enable: $parents[1].recTimeSwitchEnable }"></div> -->
 					</div>
 				</div>
 
