fix show value app version is not correct

--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </fieldset>
             <div class="text-right mt-3">
-                <label> {{ 'CCGS07_7' | i18n }} {{ model.ver }} </label>
+                <label> {{ 'CCGS07_7' | i18n(model.ver) }} </label>
             </div>
         </div>
     </div>
