--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/assy/addhist/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/assy/addhist/index.xhtml
@@ -23,21 +23,21 @@
 
 		<ui:define name="content">
 			<div id="contents-area" style="padding: 20px 30px;">
-				<div>#{i18n.getText('CMM011_36')}</div>
+				<div>#{i18n.getText('JDL0060_A222_1')}</div>
 
 				<div style="margin: 20px 30px;">
 					<div style="margin-right: 50px;"
-						data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CMM011_23', ['Com_Workplace'])}</div>
+						data-bind="ntsFormLabel: {required: true}">#{i18n.getText('JDL0060_A222_2')}</div>
 					<div id="start-date" tabindex="1"
-						data-bind="ntsDatePicker: {name: '#[CMM011_24]', required: true, value: startDate, dateFormat: 'YYYY/MM/DD'}"></div>
-					<span style="margin: 20px;">#{i18n.getText('CMM011_26')}</span> <span
+						data-bind="ntsDatePicker: {name: '#[JDL0060_A222_3]', required: true, value: startDate, dateFormat: 'YYYY/MM/DD'}"></div>
+					<span style="margin: 20px;">#{i18n.getText('JDL0060_A222_4')}</span> <span
 						data-bind="text: endDate"></span>
 				</div>
 			</div>
 			<div id="functions-area-bottom">
 				<button class="x-large proceed" tabindex="2"
-					data-bind="click: execute">#{i18n.getText('CMM011_29')}</button>
-				<button class="large" tabindex="3" data-bind="click: close">#{i18n.getText('CMM011_30')}</button>
+					data-bind="click: execute">#{i18n.getText('JDL0060_A3_1')}</button>
+				<button class="large" tabindex="3" data-bind="click: close">#{i18n.getText('JDL0060_A3_2')}</button>
 			</div>
 		</ui:define>
 	</ui:composition>
