--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/picker.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/picker.scss
@@ -35,6 +35,10 @@
     width: calc(100% - 30px);
     border: 1px solid #d9d4d4;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
+    &.plugin {
+      left: 15px;
+      top: calc(50vh - 130px);
+    }
   }
   .ipkr-header {
     padding: 0 0.5em;
