CCC001 update sample for new workplace domains

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -297,6 +297,7 @@ export interface GroupOption {
 
 	/** Advanced search properties */
 	showEmployment?: boolean; // 雇用条件
+	showDepartment?: boolean; // 部門条件
 	showWorkplace?: boolean; // 職場条件
 	showClassification?: boolean; // 分類条件
 	showJobTitle?: boolean; // 職位条件
