--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/sso/adsso.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/sso/adsso.xhtml
@@ -14,7 +14,7 @@
 		</ui:define>
 		<ui:define name="content">
 			<div id="contents-area">
-				<div style="position: relative; top: 45%; margin: 0 auto auto 40%;">
+				<div style="position: relative; top: 45%; text-align: center;">
 					<div data-bind="if: errAcc">
 						<button id="login-btn" data-bind="click: account" class="full_width proceed large">
 							<span>Get Windows Account</span>
