--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/monthly/checkalarmcommon.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/monthly/checkalarmcommon.xhtml
@@ -16,7 +16,7 @@
 		</div>
 		
 		<table id="fixed-table2">
-			    <thead>
+			    <thead style="display: block;overflow-x: hidden; overflow-y: visible;background: #e9e9e9">
 			        <tr>
 			            <th class="ui-widget-header" style ="text-align: center; background-color: #CFF1A5;width:36px"><div data-bind="ntsCheckBox: { checked: isAllCheckCondition  }"></div></th>
 						<th class="ui-widget-header" style ="text-align: center; background-color: #CFF1A5;width:36px">#{i18n.getText('KAL003_24')}</th>
@@ -24,7 +24,6 @@
 						<th class="ui-widget-header" style ="background-color: #CFF1A5;width:90px;">#{i18n.getText('KAL003_23')}</th>
 						<th class="ui-widget-header" style ="background-color: #CFF1A5;width:190px">#{i18n.getText('KAL003_25')}</th>
 						<th class="ui-widget-header" style ="background-color: #CFF1A5;width:182px;">#{i18n.getText('KAL003_188')}</th>
-						<th class="ui-widget-header" style ="background-color: #e9e9e9;width:17px;"></th>
 			        </tr>
 		        </thead>
 		       <tbody data-bind="foreach: listExtraResultMonthly">
@@ -48,7 +47,7 @@
 	                       <button data-bind="click: $parent.btnSettingCheckCondition_click.bind($parent, rowId),enable: true">#{i18n.getText('KAL003_14')}</button>
 	                   </td>
 	                   <td  style="width:190px;">
-							<div data-bind = "text: displayMessage" class="limited-label description"></div>
+							<div style="width:190px;" data-bind = "text: displayMessage" class="limited-label description"></div>
 	                   </td>
 	                   <td style="text-align: center;width:182px;">
 							<div class="cf" data-bind="ntsSwitchButton: {
