CCC001 update sample for new workplace domains

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -242,7 +242,7 @@ const ccg001ComponentOption: GroupOption = {
 	
 	/** Advanced search properties */
 	showEmployment: true,
-	showDepartment: true
+	showDepartment: true,
 	showWorkplace: true,
 	showClassification: true,
 	showJobTitle: true,
