--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/035/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/035/a/index.xhtml
@@ -16,7 +16,7 @@
             nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.CorporateNumber
             nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.RepresentativeName
             nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.RepresentativePosition
-            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.PostalCode
+            nts.uk.shr.com.primitive.PostCode
             nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.AddressKana2
             nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.AddressKana1
             nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.Address2
@@ -120,9 +120,9 @@
                         <hr id="A4_19" style="margin-bottom: 15px; width: auto"></hr>
                         <div class="flex valign-center">
                             <div id="A4_20" class="column-1"
-                                 data-bind="ntsFormLabel: { constraint: 'PostalCode', required: false }">#{i18n.getText('QMM035_23')}</div>
+                                 data-bind="ntsFormLabel: { constraint: 'PostCode', required: false }">#{i18n.getText('QMM035_23')}</div>
                             <input id="A4_21" tabindex="15"
-                                   data-bind="ntsTextEditor: {constraint: 'PostalCode',value: postalCode, name: '#[QMM035_23]'}"/>
+                                   data-bind="ntsTextEditor: {constraint: 'PostCode',value: postalCode, name: '#[QMM035_23]'}"/>
                         </div>
                         <div class="flex valign-center">
                             <div id="A4_23" class="column-1"
