fixbug 107325: fix css, html relate to table ver 3

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/kal003.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/kal003.a.style.css
@@ -27,9 +27,9 @@
 	vertical-align: top;
 	padding-top: 20px;
 }
-.container {
+/* .container {
     display: inline;
-}
+} */
 div[class^="tab-content"] {
 	padding: 20px;
 }
@@ -123,7 +123,7 @@ label.label4w4d {
 }
 
 button.nts-switch-button{
-	width: 90px !important;
+	width: 70px !important;
 }
 #check-condition-table, #check-condition-table tr th, #check-condition-table tr td,
 #check-condition-table_category9, #check-condition-table_category9 tr th, #check-condition-table_category9 tr td,
