update for http://192.168.50.4:3000/issues/107598

--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/e/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/e/index.html
@@ -27,7 +27,7 @@
                     v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }" />
             </form>
     
-            <div class="accordion" v-nts-accordion v-if="policy.isUse">
+            <div class="accordion" v-if="policy.isUse">
                 <div class="card">
                     <div class="card-header">
                         <button class="btn btn-link" type="button">
