KCP004 update sample

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/004/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/004/index.xhtml
@@ -241,7 +241,7 @@ $('#tree-grid').ntsTreeComponent(self.treeGrid);
 										<tr>
 											<td><lable>startMode</lable> <br /> <lable>
 												<i>(optional)</i></lable></td>
-											<td><b>Type:</b>number<br /> <b>Default:</b>1<br /> <pre>
+											<td><b>Type: </b>number<br /> <b>Default: </b>0 (WORKPLACE)<br /> <pre>
 <![CDATA[StartMode {
      static WORKPLACE = 0;
      static DEPARTMENT = 1;
